Partners (Claim your page) now live

--- a/index.html
+++ b/index.html
@@ -43,18 +43,28 @@
   })(window,document,'script','dataLayer','GTM-MQWRJJ');</script>
   <!-- End Google Tag Manager -->
 
-  <div class="container  max-width--980  horizontal--center  padding--top-two-spaces">
-    <section class="padding--bottom-one-space  show-on-mobile">
-      <img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" />
-      <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
+  <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
+    <nav class="homepage--navigation">
+      <a href="http://stagedoorapp.com" class="current" title="Back to Homepage">Home</a>
+      <a href="http://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
+      <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> iOS app</span></a>
+    </nav>
+
+    <section class="padding--bottom-one-space  show-on-mobile  text--center">
+      <img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /><br/>
+      <h2>Stagedoor</h2>
     </section>
 
     <section class="cf">
       <div class="float--left  width--40">
-        <img src="images/screenshot.png" alt="stagedoor app theatre london screenshot" class="iphone-screenshot" />
+        <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
+          <img src="images/phone-screenshot.jpg" alt="screenshit" class="iphone-screenshot__inside" />
+          <img src="images/iphone.png" alt="iphone" />
+        </span>
       </div>
 
-      <div class="float--right  width--60  margin--top-six-spaces">
+      <div class="float--right  width--60  margin--top-five-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
           <img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" />
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
@@ -63,17 +73,17 @@
         <h1 class="padding--top-bottom-one-space">The must-have <strong>app for the London theatre</strong> lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download free for iOS</a>
         </p>
-        <small class="opacity--50  padding--top-half-space">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
+        <small class="opacity--50  padding--top-half-space  center-on-mobile">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
       </div>
     </section>
 
-    <section class="margin--top-bottom-four-spaces">
+    <section class="margin--top-bottom-four-spaces  center-on-mobile">
       <div class="columns--3">
         <div>
           <h2>Never miss out</h2>
-          <p class="text--bigger">Discover everything about the theatre performances you want to see and save them in your calendar so that you <a href="https://twitter.com/hashtag/nevermissout" target="_blank" title="Nevermissout hashtag on Twitter">#nevermissout</a>.</p>
+          <p class="text--bigger">Discover everything about the theatre performances you want to see and save them in your calendar so that you #nevermissout.</p>
         </div>
         <div>
           <h2>Tailor-made</h2>
@@ -87,12 +97,12 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  text--center">
-      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="https://medium.com/@Stagedoor/stagedoor-discussions-emma-kay-and-sarah-mcpartlan-4183e182986c#.k25piq1to" rel="nofollow">Read our blog &rarr;</a></p>
-      <p>We post theatre-related articles.</p>
+      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/partners" rel="nofollow">Claim your Stagedoor page &rarr;</a></p>
+      <p>For theatre venues and companies.</p>
     </section>
 
-    <footer class="opacity--50  text--center  padding--bottom-one-space">
-      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow">@stagedoorLDN</a> for updates.</span>
+    <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
+      &copy; Copyright 2016 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow">@stagedoorLDN</a> for updates.</span>
       <div>
         Stagedoor &hearts; <strong>London theatre</strong>.
       </div>
