--- a/theyard.html
+++ b/theyard.html
@@ -18,14 +18,14 @@
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
   <meta property="og:title" content="Follow The Yard on Stagedoor." />
   <meta property="og:description" content="Stay up-to-date with The Yard theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
-  <meta property="og:url" content="http://stagedoorapp.com" />
+  <meta property="og:url" content="http://www.stagedoorapp.com/theyard" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://stagedoorapp.com" />
+  <meta name="twitter:url" content="http://www.stagedoorapp.com/theyard" />
   <meta name="twitter:title" content="Stagedoor" />
   <meta name="twitter:description" content="Follow The Yard on Stagedoor." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
