--- a/theyard.html
+++ b/theyard.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com" />
+  <link rel="canonical" href="http://stagedoorapp.com/theyard" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
@@ -15,17 +15,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
+  <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
   <meta property="og:title" content="Follow The Yard on Stagedoor." />
   <meta property="og:description" content="Stay up-to-date with The Yard theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
-  <meta property="og:url" content="http://www.stagedoorapp.com/theyard" />
+  <meta property="og:url" content="http://stagedoorapp.com/theyard" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://www.stagedoorapp.com/theyard" />
+  <meta name="twitter:url" content="http://stagedoorapp.com/theyard" />
   <meta name="twitter:title" content="Stagedoor" />
   <meta name="twitter:description" content="Follow The Yard on Stagedoor." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
