--- a/youngvic.html
+++ b/youngvic.html
@@ -2,23 +2,23 @@
 <html lang="en-gb">
 
 <head>
-  <title>The Yard Theatre on Stagedoor</title>
+  <title>Young Vic Theatre on Stagedoor</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com/theyard" />
+  <link rel="canonical" href="http://stagedoorapp.com/youngvic" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="Stay up-to-date with The Yard theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
+  <meta name="description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
-  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
-  <meta property="og:title" content="Follow The Yard on Stagedoor." />
-  <meta property="og:description" content="Stay up-to-date with The Yard theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
-  <meta property="og:url" content="http://stagedoorapp.com/theyard" />
+  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/youngvic.png" />
+  <meta property="og:title" content="Follow Young Vic on Stagedoor." />
+  <meta property="og:description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
+  <meta property="og:url" content="http://stagedoorapp.com/youngvic" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
   <meta property="article:author" content="Stagedoor" />
@@ -26,10 +26,10 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://stagedoorapp.com/theyard" />
-  <meta name="twitter:title" content="Follow The Yard on Stagedoor." />
-  <meta name="twitter:description" content="Stay up-to-date with The Yard theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
+  <meta name="twitter:url" content="http://stagedoorapp.com/youngvic" />
+  <meta name="twitter:title" content="Follow Young Vic on Stagedoor." />
+  <meta name="twitter:description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/youngvic.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
@@ -48,20 +48,20 @@
     <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="text--center  huge-link">
       <img src="images/apple-touch-icon@2x.png" alt="apple icon stagedoor theatre" class="horizontal--center" width="80" height="80" /><br/>
       <span class="text--h2">Download Stagedoor app for iOS</span>
-      <span>Then search for <em>“The Yard”</em> and follow them.</span>
+      <span>Then search for <em>“Young Vic”</em> and follow them.</span>
     </a>
     <div class="text--center  text">
-      <h2>Share The Yard&rsquo;s Stagedoor page</h2>
+      <h2>Share Young Vic&rsquo;s Stagedoor page</h2>
       <p>&bull; Share this image:<br/>
-        <a href="images/theatre/theyard-stagedoor.png" target="_blank"><img src="images/theatre/theyard-stagedoor.png" alt="apple icon stagedoor theatre" class="cursor--pointer  horizontal--center"  /></a>
+        <a href="images/theatre/youngvic.png" target="_blank"><img src="images/theatre/youngvic.png" alt="apple icon stagedoor theatre" class="cursor--pointer  horizontal--center"  /></a>
       </p>
       <p>&bull; Or, copy this URL:<br/>
-      <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/theyard" /></p>
+      <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/youngvic" /></p>
       <p>When pasting this URL, the above image <br/>will be attached automatically.</p>
     </div>
   </div>
 
-  <footer class="text--center">
+  <footer class="opacity--70  text--center">
     <a href="http://stagedoorapp.com" class="link--red  position--absolute  position--absolute--bottom-center  block" title="Back to Homepage">Back to Homepage</a>
   </footer>
 
