fixing author: OG tag

--- a/theyard.html
+++ b/theyard.html
@@ -21,7 +21,7 @@
   <meta property="og:url" content="http://stagedoorapp.com/theyard" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
-  <meta property="article:author" content="Stagedoor" />
+  <meta property="article:author" content="https://www.facebook.com/stagedoorapp" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
