--- a/youngvic.html
+++ b/youngvic.html
@@ -15,7 +15,7 @@
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
-  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/youngvic.png" />
+  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/youngvic-stagedoor.png" />
   <meta property="og:title" content="Follow Young Vic on Stagedoor." />
   <meta property="og:description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
   <meta property="og:url" content="http://stagedoorapp.com/youngvic" />
@@ -29,7 +29,7 @@
   <meta name="twitter:url" content="http://stagedoorapp.com/youngvic" />
   <meta name="twitter:title" content="Follow Young Vic on Stagedoor." />
   <meta name="twitter:description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/youngvic.png" />
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/youngvic-stagedoor.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
@@ -53,7 +53,7 @@
     <div class="text--center  text">
       <h2>Share Young Vic&rsquo;s Stagedoor page</h2>
       <p>&bull; Share this image:<br/>
-        <a href="images/theatre/youngvic.png" target="_blank"><img src="images/theatre/youngvic.png" alt="apple icon stagedoor theatre" class="cursor--pointer  horizontal--center"  /></a>
+        <a href="images/theatre/youngvic-stagedoor.png" target="_blank"><img src="images/theatre/youngvic-stagedoor.png" alt="apple icon stagedoor theatre" class="cursor--pointer  horizontal--center"  /></a>
       </p>
       <p>&bull; Or, copy this URL:<br/>
       <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/youngvic" /></p>
