--- a/theyard.html
+++ b/theyard.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -48,7 +48,7 @@
     <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="text--center  huge-link">
       <img src="images/apple-touch-icon@2x.png" alt="apple icon stagedoor theatre" class="horizontal--center" width="80" height="80" /><br/>
       <span class="text--h2">Download Stagedoor app for iOS</span>
-      <span>Then search for <em>“The Yard”</em> and follow them.</span>
+      <span>Then search for <em>&ldquo;The Yard&rsquo;</em> and tap <span class="border--1px">Follow</span></span>
     </a>
     <div class="text--center  text">
       <h2>Share The Yard&rsquo;s Stagedoor page</h2>
