--- a/youngvic.html
+++ b/youngvic.html
@@ -48,7 +48,7 @@
     <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="text--center  huge-link">
       <img src="images/apple-touch-icon@2x.png" alt="apple icon stagedoor theatre" class="horizontal--center" width="80" height="80" /><br/>
       <span class="text--h2">Download Stagedoor app for iOS</span>
-      <span>Then search for <em>“Young Vic”</em> and follow them.</span>
+      <span>Then search for <em>&ldquo;Young Vic&rdquo;</em> and tap <span class="border--1px">Follow</span></span>
     </a>
     <div class="text--center  text">
       <h2>Share Young Vic&rsquo;s Stagedoor page</h2>
