--- a/youngvic.html
+++ b/youngvic.html
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/youngvic" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
+  <meta name="description" content="Stay up to date with current and upcoming shows at Young Vic Theatre. Save and Recommend your favourite ones." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/youngvic-stagedoor.png" />
   <meta property="og:title" content="Follow Young Vic on Stagedoor." />
-  <meta property="og:description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
+  <meta property="og:description" content="Stay up to date with current and upcoming shows at Young Vic Theatre. Save and Recommend your favourite ones." />
   <meta property="og:url" content="http://stagedoorapp.com/youngvic" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -28,7 +28,7 @@
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/youngvic" />
   <meta name="twitter:title" content="Follow Young Vic on Stagedoor." />
-  <meta name="twitter:description" content="Stay up-to-date with Young Vic theatre. What’s on, who’s in it. Like, share, and rate your favourite theatre performances and performers." />
+  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at Young Vic Theatre. Save and Recommend your favourite ones." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/youngvic-stagedoor.png" />
 </head>
 <body>
