--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-gb">
 
 <head>
-  <title>Stagedoor - London theatre app</title>
+  <title>London theatre app – Stagedoor</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
@@ -16,7 +16,7 @@
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
-  <meta property="og:title" content="Stagedoor — London theatre app" />
+  <meta property="og:title" content="London theatre app - Stagedoor" />
   <meta property="og:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all." />
   <meta property="og:url" content="http://stagedoorapp.com" />
   <meta property="og:site_name" content="Stagedoor" />
@@ -26,8 +26,8 @@
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com" />
-  <meta name="twitter:title" content="Stagedoor" />
-  <meta name="twitter:description" content="Stagedoor: The must-have app for the London theatre lover." />
+  <meta name="twitter:title" content="London theatre app - Stagedoor" />
+  <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
 <body>
@@ -50,21 +50,21 @@
     </nav>
 
     <section class="padding--bottom-one-space  show-on-mobile  text--center">
-      <img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /><br/>
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
       <h2>Stagedoor</h2>
     </section>
 
     <section class="cf">
       <div class="float--left  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
-          <img src="images/phone-screenshot.jpg" alt="screenshit" class="iphone-screenshot__inside" />
+          <img src="images/phone-screenshot.jpg" alt="stagedoor london theatre app" class="iphone-screenshot__inside" />
           <img src="images/iphone.png" alt="iphone" />
         </span>
       </div>
 
       <div class="float--right  width--60  margin--top-five-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" />
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
@@ -80,16 +80,16 @@
     <section class="margin--top-bottom-four-spaces  center-on-mobile">
       <div class="columns--3">
         <div>
-          <h2>Never miss out</h2>
-          <p class="text--bigger">Discover everything about the theatre performances you want to see and save them in your calendar so that you #nevermissout.</p>
-        </div>
-        <div>
-          <h2>Tailor-made</h2>
-          <p class="text--bigger">Select from our 12 theatre-specific categories to find great performances and receive personalised recommendations.</p>
-        </div>
-        <div>
           <h2>Stay up-to-date</h2>
           <p class="text--bigger">Follow directors, writers, cast, and venues, so you know what&rsquo;s on. Be the first to find out about any <strong>London production</strong> however big or small.</p>
+        </div>
+        <div>
+          <h2>Never miss out</h2>
+          <p class="text--bigger">Discover everything about the theatre performances you want to see and save them in your calendar so that you never miss out.</p>
+        </div>
+        <div>
+          <h2>Tailor-made for you</h2>
+          <p class="text--bigger">Select from 12 theatre-specific categories to discover great performances and receive personalised recommendations.</p>
         </div>
       </div>
     </section>
@@ -102,7 +102,7 @@
     <footer class="opacity--50  text--center  padding--top-one-space  padding--bottom-one-space">
       &copy; Copyright 2016 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow">@stagedoorLDN</a> for updates.</span>
       <div>
-        Stagedoor &hearts; <strong>London theatre</strong>.
+        Stagedoor is a <strong>London theatre app</strong>.
       </div>
 
       <br/><a href="https://mixpanel.com/f/partner" target="_blank" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
