Added The Yard venue page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="float--left  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
           <img src="images/phone-screenshot.jpg" alt="stagedoor london theatre app" class="iphone-screenshot__inside" />
-          <img src="images/iphone.png" alt="iphone" />
+          <img src="images/iphone.png" alt="iphone placeholder" />
         </span>
       </div>
 
@@ -69,7 +69,7 @@
         </header>
 
         <h1 class="padding--top-bottom-one-space">The must-have <strong>app for the London theatre</strong> lover.</h1>
-        <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
+        <h2 class="center-on-mobile">Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download free for iOS</a>
         </p>
