--- a/theyard.html
+++ b/theyard.html
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/theyard" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="Stay up to date with current and upcoming shows at the Yard. Save and Recommend your favourite ones." />
+  <meta name="description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
   <meta property="og:title" content="Follow The Yard on Stagedoor." />
-  <meta property="og:description" content="Stay up to date with current and upcoming shows at the Yard. Save and Recommend your favourite ones." />
+  <meta property="og:description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones." />
   <meta property="og:url" content="http://stagedoorapp.com/theyard" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -28,12 +28,12 @@
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/theyard" />
   <meta name="twitter:title" content="Follow The Yard on Stagedoor." />
-  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at the Yard. Save and Recommend your favourite ones." />
+  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -43,37 +43,73 @@
   <!-- End Google Tag Manager -->
 
 
+  <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
+    <section class="padding--bottom-one-space  show-on-mobile  text--center">
+      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
+      <h2>Stagedoor</h2>
+    </section>
 
-  <div class="container  fill-height-or-more">
-    <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="text--center  huge-link">
-      <img src="images/apple-touch-icon@2x.png" alt="apple icon stagedoor theatre" class="horizontal--center" width="80" height="80" /><br/>
-      <span class="text--h2">Download Stagedoor app for iOS</span>
-      <span>Then search for <em>&ldquo;The Yard&rsquo;</em> and tap <span class="border--1px">Follow</span></span>
-    </a>
-    <div class="text--center  text">
-      <h2>Share The Yard&rsquo;s Stagedoor page</h2>
-      <p>&bull; Share this image:<br/>
-        <a href="images/theatre/theyard-stagedoor.png" target="_blank"><img src="images/theatre/theyard-stagedoor.png" alt="apple icon stagedoor theatre" class="cursor--pointer  horizontal--center"  /></a>
+    <section class="cf">
+      <div class="float--right  width--40">
+        <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
+          <img src="images/theatre/iphone/theyard.jpg" alt="the yard theatre stagedoor" class="iphone-screenshot__inside" />
+          <img src="images/iphone.png" alt="iphone placeholder" />
+        </span>
+      </div>
+
+      <div class="float--left  width--60  margin--top-four-spaces">
+        <header class="padding--bottom-one-space  hide-on-mobile">
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
+          <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
+        </header>
+
+        <h1 class="padding--top-bottom-one-space">The Yard is now officially on Stagedoor.</h1>
+        <h2><a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow the Yard&rsquo;s page</a> to stay up to date with current and upcoming shows.</h2><br/>
+        <h3>Stagedoor helps you discover and stay up to date with your favourite shows, venues, and creatives.</h3>
+        <p class="text--bigger  margin--top-two-spaces">
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
+          <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px">Follow</span></span>
+        </p>
+      </div>
+    </section>
+
+
+    <section class="margin--top-bottom-four-spaces  center-on-mobile">
+      <div class="columns--3">
+        <div>
+          <h2>Stay up-to-date</h2>
+          <p class="text--bigger">Follow directors, writers, cast, and venues, to always know what&rsquo;s on. Be the first to find out about any <strong>London production</strong> however big or small.</p>
+        </div>
+        <div>
+          <h2>Never miss out</h2>
+          <p class="text--bigger">Discover everything about the theatre performances you want to see and save them in your calendar so that you never miss out.</p>
+        </div>
+        <div>
+          <h2>Tailor-made for you</h2>
+          <p class="text--bigger">Select from 12 theatre-specific categories to discover great performances and receive personalised recommendations.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="margin--top-bottom-four-spaces  horizontal--center  text--center">
+      <h2>Discover all there is to know about The Yard.</h2>
+      <p class="text--bigger  margin--top-one-space">
+        <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
+        <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px">Follow</span></span>
       </p>
-      <p>&bull; Or, copy this URL:<br/>
-      <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/theyard" /></p>
-      <p>When pasting this URL, the above image <br/>will be attached automatically.</p>
-    </div>
+    </section>
+
+
+    <footer class="padding--bottom-one-space">
+      <h3>Spread the word and share this!</h3>
+      <p>Post <a href="images/theatre/theyard-stagedoor.png" target="_blank">this image</a> on social networks and send to friends.</p>
+      <p>Or, copy this URL: <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/theyard" />
+      <small class="text--grey">When pasting the URL, the above image will be attached automatically.</small>
+      </p><br/>
+      <div class="opacity--50">
+        <a href="http://stagedoorapp.com" class="no-link-colour">Stagedoor</a> is a <strong>London theatre app</strong>.
+      </div>
+    </footer>
   </div>
-
-  <footer class="text--center">
-    <a href="http://stagedoorapp.com" class="link--red  position--absolute  position--absolute--bottom-center  block" title="Back to Homepage">Back to Homepage</a>
-  </footer>
-
-  <!-- JS scripts -->
-  <script type="text/javascript" src="scripts/partials/_retina.min.js"></script>
-  <script>
-    // detect if iPhone/iPad replace iTunes link with direct App Store link
-    if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-      document.getElementById('appstore-link').href="itms://itunes.apple.com/gb/app/stagedoor-london-theatre-app/id963068912"
-    }
-  </script>
-  <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script-->
-  <!--script src="scripts/app.min.js"></script-->
 </body>
 </html>
