--- a/theyard.html
+++ b/theyard.html
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/theyard" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones." />
+  <meta name="description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
   <meta property="og:title" content="Follow The Yard on Stagedoor." />
-  <meta property="og:description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones." />
+  <meta property="og:description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta property="og:url" content="http://stagedoorapp.com/theyard" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -28,12 +28,12 @@
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/theyard" />
   <meta name="twitter:title" content="Follow The Yard on Stagedoor." />
-  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones." />
+  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at The Yard. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/theyard-stagedoor.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
