Style changes and venue image change

--- a/theyard.html
+++ b/theyard.html
@@ -35,7 +35,7 @@
   <!-- Google Tag Manager -->
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  <!--script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -68,7 +68,7 @@
         <h3>Stagedoor helps you discover and stay up to date with your favourite shows, venues, and creatives.</h3>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
-          <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px">Follow</span></span>
+          <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
         </p>
       </div>
     </section>
@@ -95,7 +95,7 @@
       <h2>Discover all there is to know about The Yard.</h2>
       <p class="text--bigger  margin--top-one-space">
         <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
-        <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px">Follow</span></span>
+        <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
       </p>
     </section>
 
@@ -107,7 +107,7 @@
       <small class="text--grey">When pasting the URL, the above image will be attached automatically.</small>
       </p><br/>
       <div class="opacity--50">
-        <a href="http://stagedoorapp.com" class="no-link-colour">Stagedoor</a> is a <strong>London theatre app</strong>.
+        Stagedoor is a <strong><a href="http://stagedoorapp.com" class="no-link-colour">London theatre app</a></strong>.
       </div>
     </footer>
   </div>
