Replaced native download links with HOKO

--- a/theyard.html
+++ b/theyard.html
@@ -45,7 +45,7 @@
 
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
     <section class="padding--bottom-one-space  show-on-mobile  text--center">
-      <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
+      <a href="https://stagedoor.hoko.link/theyard" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a><br/>
       <h2>Stagedoor</h2>
     </section>
 
@@ -59,15 +59,15 @@
 
       <div class="float--left  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
+          <a href="https://stagedoor.hoko.link/theyard" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
         <h1 class="padding--top-bottom-one-space">The Yard is now officially on Stagedoor.</h1>
-        <h2><a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow the Yard&rsquo;s page</a> to stay up to date with current and upcoming shows.</h2><br/>
+        <h2><a href="https://stagedoor.hoko.link/theyard" class="appstore-link  no-link-colour" title="Download Stagedoor">Follow the Yard&rsquo;s page</a> to stay up to date with current and upcoming shows.</h2><br/>
         <h3>Stagedoor helps you discover and stay up to date with your favourite shows, venues, and creatives.</h3>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
+          <a href="https://stagedoor.hoko.link/theyard" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
           <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
         </p>
       </div>
@@ -94,7 +94,7 @@
     <section class="margin--top-bottom-four-spaces  horizontal--center  text--center">
       <h2>Discover all there is to know about The Yard.</h2>
       <p class="text--bigger  margin--top-one-space">
-        <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
+        <a href="https://stagedoor.hoko.link/theyard" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
         <span class="block  center-on-mobile">Then search for <em>&ldquo;The Yard&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
       </p>
     </section>
@@ -117,8 +117,8 @@
     if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
       window.location = 'stagedoor://venue/13?_hk_cid=56eacad62ea6245c7b00b986';
       setTimeout(function() {
-        window.location = "https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8";
-      }, 500);
+        window.location = "http://bit.ly/vnstgdr";
+      }, 666);
     }
   </script>
 </body>
